--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+     <link rel="shortcut icon" href="./imgs/dde1ee3d-0ecb-46de-8fec-22ba175cb077.d76858e6f6a3ed8d4b8a2d2aea519cac.jpg" type="image/x-icon">
     <title>Card</title>
 </head>
 <body>
